--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,28 +18,52 @@
     }
 
     // Regular
-
+    console.log("Hi")
     // Interpolated
-
+    console.log(`Hi ${dogs}`)
     // Styled
-
+    console.log("%c Hi","font-size:22px")
     // warning!
-
+    console.warn("Noo, cuidado")
     // Error :|
-
+    console.error("Noo, un error")
     // Info
-
+    console.info('Interesante... info')
     // Testing
-
+    console.assert(1===2, "Esto esta mal")
     // clearing
-
+    //console.clear()
     // Viewing DOM Elements
-
+    const pe = document.querySelector("p");
+    console.log(pe)
+    console.dir(pe)
     // Grouping together
-
+    dogs.forEach(dog => {
+      console.group(dog.name)
+      console.log(`His name is: ${dog.name}`)
+      console.log(`His age is: ${dog.age}`)
+      console.groupEnd(dog.name)
+    })
     // counting
+    console.count("Hii")
+    console.count("Holaa")
+    console.count("Hii")
+    console.count("Aloha")
+    console.count("Holaa")
+    console.count("Hii")
+    console.count("Holaa")
+    console.count("Holaa")
+    console.count("Hii")
 
     // timing
+
+    console.time("feching data");
+    fetch("https://api.github.com/users/wesbos")
+     .then(data => data.json)
+     .then(data => {
+       console.timeEnd("feching data")
+       console.log(data)
+     })
 
   </script>
 </body>
